Realiza assinatura de QrCode a partir de certificados disponibilizados na base e no vault.